Add images to blog post for visual enhancement

--- a/blog.html
+++ b/blog.html
@@ -306,6 +306,8 @@
 
                     <p> The camera helps me explore new areas with intention. Looking for interesting buildings and moments to document. I want to remember this beautiful day. How the sun dances between the leaves on the trees. How their shadows fall on the concrete. How the abandoned building contrasts against the massive sign proclaiming “BBQ King”.</p>
 
+                    <img src="images/R0000186.jpg" class="small">
+                    
                     <p> The flip phone means I can stay in contact with the people I love without the ability to scroll whenever I remember I am bored. I cannot bust it out when I make eye contact with the man in the F-150 who’s also waiting for the light to turn.</p>
 
                     <p> I pop the ZYN in whenever the feelings start to creep in. The slow release of nicotine traveling from my gums and into my brain deafens the anxiety of carrying this tote bag.</p>
@@ -326,7 +328,8 @@
 
                     <p> “Nobody cares unless I think they do.”</p>
 
-                    <img src="images/R0000186.jpg" class="small">
+                    <img src="images/R0000186.jpg" class="small"> <img src="images/R0000180.jpg" class="small">
+                    <img src="images/R0000182.jpg" class="small"> <img src="images/R0000192.jpg" class="small">
                 `
             },
         ];
