Update text in blog.html for clarity

--- a/blog.html
+++ b/blog.html
@@ -304,7 +304,7 @@
 
                     <p> There can be a similar case made for all of these items. The wired headphones are cheap yet durable. They don’t completely block out the world. I can hear the birds chirping and kids playing on the rickety swing set while my music hums in the background.</p>
 
-                    <p> The camera helps me explore new areas with intention. Looking for interesting buildings and moments to document. I want to remember this beautiful day. How the sun dances between the leaves on the trees. How their shadows fall on the concrete. How the abandoned building contrasts against the massive sign proclaiming “BBQ King”.</p>
+                    <p> The camera helps me explore new areas with intention. Looking for interesting buildings and moments to document. I want to remember this beautiful day. How the sun dances between the leaves on the trees. How their shadows fall on the concrete. How the abandoned building contrasts against the massive sign proclaiming “King of BBQ”.</p>
 
                     <img src="images/R0000186.jpg" class="small">
                     
