Add cover image to blog post content

--- a/blog.html
+++ b/blog.html
@@ -295,7 +295,9 @@
                 icon: "images/finger.gif",
                 position: { top: '55%', left: '20%', rotation: -8 },
                 content: `
-
+                
+                    <img src="cover.png" class="small">
+                    
                     <p> Every Saturday, I leave the house and set out with a canvas tote bag brimming with items my pockets cannot contain:  wallet, keys, pocket radio with wired earbuds, flip phone, digital camera, notebook, pen, one pack of ZYN, and whatever book I am currently reading.</p>
 
                     <p> Upon entering the world with this inventory, I begin battling my inner thoughts. They are telling me “You are being performative.” That barista thinks I am a clown. The teens driving their E-bikes know I am just another male archetype. The lady walking her goldendoodle. She doesn’t care. She’s not chronically online. Yet, I still think she may.</p>
@@ -328,7 +330,7 @@
 
                     <p> “Nobody cares unless I think they do.”</p>
 
-                    <img src="images/R0000186.jpg" class="small"> <img src="images/R0000180.jpg" class="small">
+                    <img src="images/R0000180.jpg" class="small">
                     <img src="images/R0000182.jpg" class="small"> <img src="images/R0000192.jpg" class="small">
                 `
             },
