Change image source from cover.png to images/cover.jpg
Updated image source in blog content.

--- a/blog.html
+++ b/blog.html
@@ -296,7 +296,7 @@
                 position: { top: '55%', left: '20%', rotation: -8 },
                 content: `
                 
-                    <img src="cover.png" class="small">
+                    <img src="images/cover.jpg" class="small">
                     
                     <p> Every Saturday, I leave the house and set out with a canvas tote bag brimming with items my pockets cannot contain:  wallet, keys, pocket radio with wired earbuds, flip phone, digital camera, notebook, pen, one pack of ZYN, and whatever book I am currently reading.</p>
 
