Update blog posts with new entry and ID changes

--- a/blog.html
+++ b/blog.html
@@ -289,7 +289,7 @@
                 `
             },
             {
-                id: 3,
+                id: 4,
                 title: "It's All a Performance",
                 date: "January 6, 2026",
                 icon: "images/finger.gif",
@@ -333,6 +333,16 @@
                     <img src="images/R0000180.jpg" class="small">
                     <img src="images/R0000182.jpg" class="small"> <img src="images/R0000192.jpg" class="small">
                 `
+            },
+             {
+                id: 5,
+                title: "Public Transit",
+                date: "December 1, 2025",
+                icon: "images/public6.gif",
+                position: { top: '42%', left: '19%', rotation: 12 },
+                content: `
+                      <p> “Nobody cares unless I think they do.”</p>
+                    `
             },
         ];
         
