Update blog content to reflect new perspective
Replaced old content with a new message about Instagram.

--- a/blog.html
+++ b/blog.html
@@ -253,9 +253,8 @@
                 icon: "images/welcome3.gif",
                 position: { top: '15%', left: '10%', rotation: -5 },
                 content: `
-                    <p>The death of social media has given way to the resurgence of blogs. Instagram is no longer a place to connect with friends or be yourself. It’s a hellscape that manages to convince you that you're a worthless nothing loser. Well I’m here to personally tell you they are correct. You are a worthless nothing loser if you are reading this. Maybe go back to work you bum. Get outside. Do something.</p>
-                    
-                    <p>Now If you are a potential employer reading this because I turned my once semi-professional portfolio into a blog for friends and family. You are not a worthless nothing loser. You are amazing. This is a platform of love and positivity, I’m just joshing with my two viewers.</p>
+                    <p>Instagram is dead. I’m just here to practice my prose.</p>
+
                     `
             },
             {
