Change blog post title and content to drinking

--- a/blog.html
+++ b/blog.html
@@ -335,26 +335,12 @@
             },
              {
                 id: 5,
-                title: "Public Transit",
+                title: "Drinking",
                 date: "January 17, 2026",
-                icon: "images/public6.gif",
+                icon: "images/guy.gif",
                 position: { top: '42%', left: '44%', rotation: 12 },
                 content: `
-                      <p>Many in the US are quick to write off public transportation. It is ineffective. It is expensive. It is for homeless people. The stigma around transit in the states is less about the merits of buses and more about the demerits of our institutions. “From the people who brought you the <em>DMV</em> and <em>Iraq</em> comes <strong>TRAINS</strong>” But let’s say our government could do something correctly. I think public transit would be a good place to start because: </p>
-
-                      <p>Trains make drinking way better.</p>
-
-                      <p>Think of how much more you could drink if you did not need to leave your car at the bar. Think of how many more stadium beers you would swallow if you weren't busy calculating the cost of an Uber. All of us should feel the thrill of rushing through a stadium to catch the first train out. Just to inevitably be caught behind the wall of posers who left early.</p>
-
-                      <p>When you crowd onto a train you absorb the tension after a tough loss and the joy after a big win. You glance at the guy who was unlucky enough to be headed home when the game ended. Your eye contact conveys some sympathy but you don’t really care because you drank all day without fear. Fear of a DUI. Fear of traffic.</p>
-
-                      <p>Republicans and Democrats can all agree: drinking rules! Whether at a wine bar or sports bar we can all unite around these intoxicants, not as individuals but together. This is what our crumbling institutions fear.</p>
-
-                      <p>Drinking is Alchemy. Equal parts making memories and forgetting them. It’s having a night out with coworkers while forgetting expense reports are due the next day. It’s arguing about the fast and furious franchise not the border. It’s forgetting that your president is a pedophile or that “not your president” is a pedophile. It’s also remembering. Seven beers and a pen rip remind you that the robot gunning for your job has never felt this good in its life. And the next morning makes you realize it has never felt this bad in its life either. </p>
-
-                      <p>Trains are not just great for drinking, they are also great for being hungover. I personally do not think there is a scarier feeling than putting that key in the ignition while violently hungover. I want to stare out the window and take in the view, not operate a two-ton vehicle while dodging E-Bikers. I have a dream. A dream that all Americans can pick up a gatorade without the worry of vehicular manslaughter.</p>
-
-                      <p>So if our government ever decides to take a break from building bunker busting bombs. The least they can do is start laying some track. This way we can all drink together united with the peace of mind we’ll all get home safe. Trains are unity. Trains are freedom. </p>
+                      <p>Test</p>
 
                     `
             },
