--- a/blog.html
+++ b/blog.html
@@ -336,8 +336,8 @@
              {
                 id: 5,
                 title: "Drinking",
-                date: "January 17, 2026",
-                icon: "images/guy.gif",
+                date: "January 24, 2026",
+                icon: "images/beer.gif",
                 position: { top: '42%', left: '44%', rotation: 12 },
                 content: `
                       <p>Test</p>
