Update blog icon from ape.gif to guy.gif

--- a/blog.html
+++ b/blog.html
@@ -337,7 +337,7 @@
                 id: 5,
                 title: "Drinking",
                 date: "January 24, 2026",
-                icon: "images/ape.gif",
+                icon: "images/guy.gif",
                 position: { top: '42%', left: '44%', rotation: 12 },
                 content: `
                       <p>Test</p>
